[package]
name = "dotlinker"
version = "0.1.0"
authors = ["Yi Hyunjoon <yi.hyunjoon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
structopt = "0.3"
termion = "1.5"
toml = "0.5"
same-file = "1.0"
shellexpand = "2.0"
